deploy activation code
