# src/controllers/auth.controller.ts
@@ -22,7 +22,21 @@ const registerValidateSchema = Yup.object({
   fullName: Yup.string().required(),
   username: Yup.string().required(),
   email: Yup.string().email().required(),
-  password: Yup.string().required(),
+  password: Yup.string().required().min(6, "Password must be at least 6 characters").test('at-least-one-uppercase-letter', 'Contain at least one uppercase letter',
+   (value) => {
+    if (!value) return false;
+
+    const regex = /^(?=.*[A-Z])/;
+
+    return regex.test(value);
+   }).test('at-least-one-number', 'Contain at least one number',
+   (value) => {
+    if (!value) return false;
+
+    const regex = /^(?=.*\d)/;
+
+    return regex.test(value);
+   }),
   confirmPassword: Yup.string().required().oneOf([Yup.ref('password'), ""], "Password must be matched"),
 });
 
@@ -86,6 +100,7 @@ export default {
             username: identifier
           }
         ],
+        isActive: true
       });
 
       if (!userByIdentifier) {
@@ -137,6 +152,38 @@ export default {
       res.status(200).json({
         message: "Success get user profile",
         data: result,
+      })
+    } catch (error) {
+      const err = error as unknown as Error;
+      res.status(400).json({
+        message: err.message,
+        data: null
+      })
+    }
+  },
+
+  async activation(req: Request, res: Response) {
+    /**
+     #swagger.tags = ['Auth']
+     #swagger.requestBody = {
+       required: true,
+       schema: {$ref: '#components/schemas/ActivationRequest'}
+     }
+     */
+    try {
+      const { code } = req.body as { code: string };
+
+      const user = await UserModel.findOneAndUpdate({
+        activationCode: code
+      }, {
+        isActive: true
+      }, {
+        new: true
+      });
+
+      res.status(200).json({
+        message: "User Success activation",
+        data: user
       })
     } catch (error) {
       const err = error as unknown as Error;
